--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = ["Günther Jena <guenther@jena.at>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-markdown = "^3.4.1"
 jinja2 = "^3.1.2"
 libsass = "^0.22.0"
+mistletoe = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
