--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Günther Jena <guenther@jena.at>"]
 python = "^3.7"
 jinja2 = "^3.1.2"
 libsass = "^0.22.0"
-mistletoe = "^1.0.1"
+mistune = "3.0.0rc4"
 
 [tool.poetry.dev-dependencies]
 
