--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 jinja2 = "^3.1.2"
 libsass = "^0.22.0"
 mistune = "3.0.0rc4"
+python-slugify = "^8.0.0"
 
 [tool.poetry.dev-dependencies]
 
