--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ jinja2 = "^3.1.2"
 libsass = "^0.22.0"
 mistune = "3.0.0rc4"
 python-slugify = "^8.0.0"
+pygments = "^2.14.0"
 
 [tool.poetry.dev-dependencies]
 
