--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ libsass = "^0.22.0"
 mistune = "3.0.0rc4"
 python-slugify = "^8.0.0"
 pygments = "^2.14.0"
+gitpython = "^3.1.30"
 
 [tool.poetry.dev-dependencies]
 
