--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ mistune = "3.0.0rc4"
 python-slugify = "^8.0.0"
 pygments = "^2.14.0"
 gitpython = "^3.1.30"
+beautifulsoup4 = "^4.11.2"
 
 [tool.poetry.dev-dependencies]
 
