--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = ["Günther Jena <guenther@jena.at>"]
 python = ">=3.10,<3.12"
 jinja2 = "^3.1.2"
 libsass = "^0.22.0"
-mistune = "3.0.0rc5"
 python-slugify = "^8.0.0"
 pygments = "^2.14.0"
 gitpython = "^3.1.30"
@@ -32,6 +31,7 @@ notebook = "^6.5.4"
 ipykernel = "^6.22.0"
 seaborn = "^0.12.2"
 scikit-learn = "^1.2.2"
+nbconvert = "^7.3.1"
 
 [virtualenvs]
 in-project = true
