--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
     - name: Install application
       run: |
-        python -m pip install .
+        python -m pip install poetry
+        poetry install
     - name: Build website
       run: |
-        aestatic --no-cache
+        poetry run aestatic --no-cache
     - name: Deploy website
       uses: burnett01/rsync-deployments@5.2.1
       with:
