--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,23 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    - name: Install application
+    # Poetry cache depends on OS, Python version and Poetry version
+    # Caching was taken from https://gist.github.com/gh640/233a6daf68e9e937115371c0ecd39c61
+    - name: Cache Poetry cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pypoetry
+        key: poetry-cache-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ env.POETRY_VERSION }}
+    # virtualenv cache should depends on OS, Python version and `poetry.lock` (and optionally workflow files).
+    - name: Cache Packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.local
+        key: poetry-local-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/*.yml') }}
+    - name: Install Poetry ${{ env.POETRY_VERSION }}
       run: |
-        python -m pip install poetry
-        poetry install
+        curl -sSL ${{ env.POETRY_URL }} | python - --version ${{ env.POETRY_VERSION }}
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
     - name: Build website
       run: |
         poetry run aestatic --no-cache
