--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  PYTHON_VERSION: "3.10"
+  POETRY_VERSION: "1.4.2"
+  POETRY_URL: https://install.python-poetry.org
+
 permissions:
   contents: read
 
@@ -19,7 +24,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: {{ env.PYTHON_VERSION }}
     # Poetry cache depends on OS, Python version and Poetry version
     # Caching was taken from https://gist.github.com/gh640/233a6daf68e9e937115371c0ecd39c61
     - name: Cache Poetry cache
