--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: {{ env.PYTHON_VERSION }}
+        python-version: ${{ env.PYTHON_VERSION }}
     # Poetry cache depends on OS, Python version and Poetry version
     # Caching was taken from https://gist.github.com/gh640/233a6daf68e9e937115371c0ecd39c61
     - name: Cache Poetry cache
