--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
         echo "$HOME/.local/bin" >> $GITHUB_PATH
     - name: Build website
       run: |
+        poetry install
         poetry run aestatic --no-cache
     - name: Deploy website
       uses: burnett01/rsync-deployments@5.2.1
