--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pygments = "^2.14.0"
 gitpython = "^3.1.30"
 beautifulsoup4 = "^4.11.2"
 qrcode = "^7.4.2"
+mistune = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 
