remove --no-cache flag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           poetry install
       - name: Build website
         run: |
-          poetry run aestatic --no-cache
+          poetry run aestatic
       - name: Deploy website
         uses: burnett01/rsync-deployments@5.2.1
         with:
