--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -11,4 +11,4 @@ jobs:
           sudo apt-get update && sudo apt-get install linkchecker
       - name: Run linkchecker
         run: |
-          linkchecker https://semiversus.com
+          linkchecker --check-extern -f ./linkcheckerrc https://semiversus.com
