--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ gitpython = "^3.1.30"
 beautifulsoup4 = "^4.11.2"
 qrcode = "^7.4.2"
 mistune = "^3.0.1"
+minify-html = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 
