--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
-[tool.poetry]
+[project]
 name = "aestatic"
 version = "0.1.0"
 description = ""
-authors = ["Günther Jena <guenther@jena.at>"]
+authors = [
+    {name = "Günther Jena", email = "guenther@jena.at"},
+]
+requires-python = ">=3.10"
+dependencies = [
+    "jinja2>=3.1.2",
+    "libsass>=0.22.0",
+    "python-slugify>=8.0.0",
+    "pygments>=2.14.0",
+    "gitpython>=3.1.30",
+    "beautifulsoup4>=4.11.2",
+    "qrcode>=7.4.2",
+    "mistune>=3.0.1",
+    "minify-html>=0.14.0",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10"
-jinja2 = "^3.1.2"
-libsass = "^0.22.0"
-python-slugify = "^8.0.0"
-pygments = "^2.14.0"
-gitpython = "^3.1.30"
-beautifulsoup4 = "^4.11.2"
-qrcode = "^7.4.2"
-mistune = "^3.0.1"
-htmlmin = "^0.1.12"
-
-[tool.poetry.dev-dependencies]
-
-[tool.poetry.scripts]
-aestatic = 'aestatic.__main__:main'
+[project.scripts]
+aestatic = "aestatic.__main__:main"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
