--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Add uv to path
         run: echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - name: Install dependencies
-        run: uv pip install -e .
+        run: uv pip install --system -e .
       - name: Build website
         run: uv run aestatic
       - name: Deploy website
